// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CHANGE_LAYOUT Changes the map layout 1`] = `
Object {
  "activeModal": null,
  "data": Object {
    "mapContextualLayers": Object {},
    "mapDimensions": Object {},
    "mapDimensionsGroups": Array [],
    "mapVectorData": null,
  },
  "highlightedNodeCoordinates": null,
  "linkedGeoIds": Array [],
  "mapLoading": false,
  "mapView": null,
  "sankeySize": Array [
    632,
    541,
  ],
  "selectedBasemap": null,
  "selectedMapContextualLayers": null,
  "selectedMapDimensions": null,
  "toolLayout": 2,
}
`;

exports[`GET_CONTEXT_LAYERS 1`] = `
Object {
  "activeModal": null,
  "data": Object {
    "mapContextualLayers": Object {
      "10": Object {
        "id": 10,
        "identifier": "landcover",
        "isDefault": false,
        "title": "Land cover",
      },
    },
    "mapDimensions": Object {},
    "mapDimensionsGroups": Array [],
    "mapVectorData": null,
  },
  "highlightedNodeCoordinates": null,
  "linkedGeoIds": Array [],
  "mapLoading": false,
  "mapView": null,
  "sankeySize": Array [
    632,
    541,
  ],
  "selectedBasemap": null,
  "selectedMapContextualLayers": null,
  "selectedMapDimensions": null,
  "toolLayout": 1,
}
`;

exports[`GET_MAP_VECTOR_DATA 1`] = `
Object {
  "activeModal": null,
  "data": Object {
    "mapContextualLayers": Object {},
    "mapDimensions": Object {},
    "mapDimensionsGroups": Array [],
    "mapVectorData": Array [
      Object {
        "id": 10,
        "identifier": "landcover",
        "isDefault": false,
        "title": "Land cover",
      },
    ],
  },
  "highlightedNodeCoordinates": null,
  "linkedGeoIds": Array [],
  "mapLoading": false,
  "mapView": null,
  "sankeySize": Array [
    632,
    541,
  ],
  "selectedBasemap": null,
  "selectedMapContextualLayers": null,
  "selectedMapDimensions": null,
  "toolLayout": 1,
}
`;

exports[`SELECT_BASEMAP 1`] = `
Object {
  "activeModal": null,
  "data": Object {
    "mapContextualLayers": Object {},
    "mapDimensions": Object {},
    "mapDimensionsGroups": Array [],
    "mapVectorData": null,
  },
  "highlightedNodeCoordinates": null,
  "linkedGeoIds": Array [],
  "mapLoading": false,
  "mapView": null,
  "sankeySize": Array [
    632,
    541,
  ],
  "selectedBasemap": Object {
    "id": 10,
  },
  "selectedMapContextualLayers": null,
  "selectedMapDimensions": null,
  "toolLayout": 1,
}
`;

exports[`SELECT_CONTEXTUAL_LAYERS 1`] = `
Object {
  "activeModal": null,
  "data": Object {
    "mapContextualLayers": Object {},
    "mapDimensions": Object {},
    "mapDimensionsGroups": Array [],
    "mapVectorData": null,
  },
  "highlightedNodeCoordinates": null,
  "linkedGeoIds": Array [],
  "mapLoading": false,
  "mapView": null,
  "sankeySize": Array [
    632,
    541,
  ],
  "selectedBasemap": null,
  "selectedMapContextualLayers": Array [
    Object {
      "id": 10,
      "identifier": "landcover",
      "isDefault": false,
      "title": "Land cover",
    },
  ],
  "selectedMapDimensions": null,
  "toolLayout": 1,
}
`;

exports[`SET_NODE_ATTRIBUTES 1`] = `
Object {
  "activeModal": null,
  "data": Object {
    "mapContextualLayers": Object {},
    "mapDimensions": Object {},
    "mapDimensionsGroups": Array [],
    "mapVectorData": null,
  },
  "highlightedNodeCoordinates": null,
  "linkedGeoIds": Array [],
  "mapLoading": false,
  "mapView": null,
  "sankeySize": Array [
    632,
    541,
  ],
  "selectedBasemap": null,
  "selectedMapContextualLayers": null,
  "selectedMapDimensions": null,
  "toolLayout": 1,
}
`;

exports[`TOGGLE_MAP_DIMENSION Add a map dimension if the dimension is not selected 1`] = `
Object {
  "activeModal": null,
  "data": Object {
    "mapContextualLayers": Object {},
    "mapDimensions": Object {},
    "mapDimensionsGroups": Array [],
    "mapVectorData": null,
  },
  "highlightedNodeCoordinates": null,
  "linkedGeoIds": Array [],
  "mapLoading": true,
  "mapView": null,
  "sankeySize": Array [
    632,
    541,
  ],
  "selectedBasemap": null,
  "selectedMapContextualLayers": null,
  "selectedMapDimensions": Array [
    "quant90",
  ],
  "toolLayout": 1,
}
`;

exports[`TOGGLE_MAP_DIMENSION Add a map dimension in the second slot if the dimension is not selected 1`] = `
Object {
  "activeModal": null,
  "data": Object {
    "mapContextualLayers": Object {},
    "mapDimensions": Object {},
    "mapDimensionsGroups": Array [],
    "mapVectorData": null,
  },
  "highlightedNodeCoordinates": null,
  "linkedGeoIds": Array [],
  "mapLoading": true,
  "mapView": null,
  "sankeySize": Array [
    632,
    541,
  ],
  "selectedBasemap": null,
  "selectedMapContextualLayers": null,
  "selectedMapDimensions": Array [
    "NotEmpty",
    "quant90",
  ],
  "toolLayout": 1,
}
`;

exports[`TOGGLE_MAP_DIMENSION Remove map dimension if the dimension is selected 1`] = `
Object {
  "activeModal": null,
  "data": Object {
    "mapContextualLayers": Object {},
    "mapDimensions": Object {},
    "mapDimensionsGroups": Array [],
    "mapVectorData": null,
  },
  "highlightedNodeCoordinates": null,
  "linkedGeoIds": Array [],
  "mapLoading": false,
  "mapView": null,
  "sankeySize": Array [
    632,
    541,
  ],
  "selectedBasemap": null,
  "selectedMapContextualLayers": null,
  "selectedMapDimensions": Array [
    "quant95",
    null,
  ],
  "toolLayout": 1,
}
`;

exports[`TOOL_LAYERS__SAVE_MAP_VIEW 1`] = `
Object {
  "activeModal": null,
  "data": Object {
    "mapContextualLayers": Object {},
    "mapDimensions": Object {},
    "mapDimensionsGroups": Array [],
    "mapVectorData": null,
  },
  "highlightedNodeCoordinates": null,
  "linkedGeoIds": Array [],
  "mapLoading": false,
  "mapView": Object {
    "latitude": "-34.40",
    "longitude": "150.64",
    "zoom": 2,
  },
  "sankeySize": Array [
    632,
    541,
  ],
  "selectedBasemap": null,
  "selectedMapContextualLayers": null,
  "selectedMapDimensions": null,
  "toolLayout": 1,
}
`;

exports[`TOOL_LAYERS__SET_LINKED_GEOIDS sets in linkedGeoIds an array of the nodes geoIds 1`] = `
Object {
  "activeModal": null,
  "data": Object {
    "mapContextualLayers": Object {},
    "mapDimensions": Object {},
    "mapDimensionsGroups": Array [],
    "mapVectorData": null,
  },
  "highlightedNodeCoordinates": null,
  "linkedGeoIds": Array [
    "BR-123-23",
  ],
  "mapLoading": false,
  "mapView": null,
  "sankeySize": Array [
    632,
    541,
  ],
  "selectedBasemap": null,
  "selectedMapContextualLayers": null,
  "selectedMapDimensions": null,
  "toolLayout": 1,
}
`;

exports[`TOOL_LAYERS__SET_LINKED_GEOIDS sets in linkedGeoIds an empty array if there are no nodes 1`] = `
Object {
  "activeModal": null,
  "data": Object {
    "mapContextualLayers": Object {},
    "mapDimensions": Object {},
    "mapDimensionsGroups": Array [],
    "mapVectorData": null,
  },
  "highlightedNodeCoordinates": null,
  "linkedGeoIds": Array [],
  "mapLoading": false,
  "mapView": null,
  "sankeySize": Array [
    632,
    541,
  ],
  "selectedBasemap": null,
  "selectedMapContextualLayers": null,
  "selectedMapDimensions": null,
  "toolLayout": 1,
}
`;

exports[`TOOL_LAYERS__SET_MAP_DIMENSIONS 1`] = `
Object {
  "activeModal": null,
  "data": Object {
    "mapContextualLayers": Object {},
    "mapDimensions": Object {
      "quant11": Object {
        "groupId": 3,
        "layerAttributeId": 11,
        "type": "quant",
        "uid": "quant11",
      },
    },
    "mapDimensionsGroups": Array [
      Object {
        "dimensions": Array [
          "quant11",
        ],
        "id": 3,
        "name": "Agricultural indicators",
      },
      Object {
        "dimensions": Array [],
        "id": 1,
        "name": "Environmental indicators",
      },
    ],
    "mapVectorData": null,
  },
  "highlightedNodeCoordinates": null,
  "linkedGeoIds": Array [],
  "mapLoading": false,
  "mapView": null,
  "sankeySize": Array [
    632,
    541,
  ],
  "selectedBasemap": null,
  "selectedMapContextualLayers": null,
  "selectedMapDimensions": null,
  "toolLayout": 1,
}
`;
